﻿Revision history for {{$dist->name}}

{{$NEXT}}
 - Amended missing changelog entry in a previous release

1.001001 2016-04-29T12:17:45Z 78daba4
 - Marked distribution deprecated.
 - Simplified runtime dependency graph.

 [Dependencies::Stats]
 - Dependencies changed since 1.001000, see misc/*.deps* for details
 - configure: +1 (recommends: ↑1)
 - develop: +15 ↑3 -3 (recommends: +1, suggests: ↑2)
 - runtime: ↓1 -3 (recommends: +1)
 - test: +2 -1 (recommends: +1 ↑1 ↓1)

1.001000 2014-09-04T20:16:02Z
 [00 Minor]
 - tests updated.
 - uses dump_config
 - metadata fixes.

 [Dependencies::Stats]
 - Dependencies changed since 1.000003, see misc/*.deps* for details
 - develop: +1 ↑1 (suggests: ↑2)
 - runtime: +1
 - test: +1 -1 (recommends: ↑1)

 [Metadata]
 - copyright holder email address set.

 [Tests]
 - Tests rewritten with dztest

1.000003 2014-08-15T21:17:57Z
 [00 Trivial]
 - CPANDAY!
 - no code changes.
 - whitespace adjusted.

 [Dependencies::Stats]
 - Dependencies changed since 1.000002, see misc/*.deps* for details
 - develop: +1 (suggests: ↑1)

 [Misc]
 - Improve source side POD to reduce build side whitespace.

1.000002 2014-08-05T03:20:44Z
 [00 Trivial]
 - no code changes.
 - Test code updated.
 - Pod::Weaver -SingleEncoding turned on

 [Dependencies::Stats]
 - Dependencies changed since 1.000001, see misc/*.deps* for details
 - develop: (suggests: ↑1)
 - test: -3

1.000001 2014-07-30T04:06:36Z
 [Bugfix]
 - Declare test requires for a Path::Tiny that can export tempdir

 [Dependencies::Stats]
 - Dependencies changed since 1.000000, see misc/*.deps* for details
 - test: ↑1 -1 (recommends: ↑1 -2)

1.000000 2014-07-29T10:55:00Z
 [00 Major]
 - Packaging changes that may affect downstream who work by hand

 [01 Version Scheme Change]
 - Migrating from x.yyyyyyyy ( = 8 ) to x.yyyyyy ( = 6 )
 - This is the primary reason for the 1.x on the box.
 - https://questhub.io/realm/perl/quest/5388d3a9bbd0be2224000129

 [02 Toolkit Change]