@@ -1,4 +1,4 @@
-# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v5.043.
+# This file was automatically generated by Dist::Zilla::Plugin::MakeMaker v6.009.
 use strict;
 use warnings;
 
@@ -40,7 +40,7 @@ my %WriteMakefileArgs = (
     "Path::Tiny" => 0,
     "Test::DZil" => 0,
     "Test::Differences" => 0,
-    "Test::More" => "0.89"
+    "Test::More" => 0
   },
   "VERSION" => "1.001002",
   "test" => {
@@ -67,7 +67,7 @@ my %FallbackPrereqs = (
   "Path::Tiny" => 0,
   "Test::DZil" => 0,
   "Test::Differences" => 0,
-  "Test::More" => "0.89",
+  "Test::More" => 0,
   "namespace::autoclean" => 0,
   "strict" => 0,
   "warnings" => 0
