@@ -1,6 +1,8 @@
 This file contains changes in REQUIRED dependencies for standard CPAN phases (configure/build/runtime/test)
 
 1.001002
+ [Changed / test requires]
+ - Test::More 0.89 → 0
 
 1.001001 2016-04-29T12:17:45Z
  [Added / configure requires]
