@@ -3,6 +3,14 @@
 {{$NEXT}}
  - Amended missing changelog entry in a previous release
 
+ [Bugfix]
+ - Avoid test failures on -Ddefault_inc_excludes_dot
+
+ [Dependencies::Stats]
+ - Dependencies changed since 1.001001, see misc/*.deps* for details
+ - develop: +1 ↑1 (suggests: ↑2)
+ - test: ↓1
+
 1.001001 2016-04-29T12:17:45Z 78daba4
  - Marked distribution deprecated.
  - Simplified runtime dependency graph.
